--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                                     <!-- New Input Field for Prompt -->
                                     <div class="row mb-3">
                                         <div class="col">
-                                            <label for="prompt" class="form-label">Optional Prompt: </label>
+                                            <label for="prompt" class="form-label">Optional Prompt Override: </label>
                                             <textarea name="prompt" class="form-control" rows="3"></textarea>
                                         </div>
                                     </div>
@@ -158,7 +158,7 @@
                                                         <!-- New Input Field for Prompt -->
                                                         <div class="row">
                                                             <div class="col-auto mt-2">
-                                                                <label for="prompt" class="form-label">Optional Prompt: </label>
+                                                                <label for="prompt" class="form-label">Optional Prompt Override: </label>
                                                             </div>
                                                             <div class="col">
                                                                 <input type="text" name="prompt" class="form-control"
