--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                             <div class="col-auto">
                                 <a class="nav-link" href="{{ url_for('index') }}">Dashboard</a>
                             </div>                         
+                            <div class="col-auto">
+                                <a class="nav-link" href="{{ url_for('edit_config') }}">Configuration</a>
+                            </div>                         
                         </li>
                         <!-- Add more navigation links as needed -->
                     </ul>
