--- a/templates/edit_config.html
+++ b/templates/edit_config.html
@@ -7,9 +7,13 @@
     <h2>Edit Config</h2>
     <form method="post" action="{{ url_for('edit_config') }}">
         {% for key, value in config.items() %}
-        <div class="mb-3">
-            <label for="{{ key }}" class="form-label">{{ key.capitalize().replace('_', ' ') }}</label>
-            <input type="text" class="form-control" id="{{ key }}" name="{{ key }}" value="{{ value }}" required>
+        <div class="mb-3 row">
+            <div class="col-4">
+                <label for="{{ key }}" class="form-label">{{ key.capitalize().replace('_', ' ') }}</label>
+            </div>
+            <div class="col-8">
+                <input type="text" class="form-control" id="{{ key }}" name="{{ key }}" value="{{ value }}" required>
+            </div>
         </div>
         {% endfor %}
         <button type="submit" class="btn btn-primary">Save Changes</button>
