--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                                     <div class="row mb-3">
                                         <div class="col-auto">
                                             <label for="rounds" class="form-label mt-2">Number of Revision
-                                                Rounds?</label>
+                                                Rounds? (-1 for Continuous Processing)</label>
                                         </div>
                                         <div class="col-4">
                                             <input type="number" name="rounds" class="form-control" value="1" min="1"
