--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
                             <div class="col-auto">
                                 <a class="nav-link" href="{{ url_for('edit_config') }}">Configuration</a>
                             </div>                         
+                            <div class="col-auto">
+                                <a class="nav-link" href="{{ url_for('ad_hoc_chat') }}">Ad Hoc Chat</a>
+                            </div>                         
                         </li>
                         <!-- Add more navigation links as needed -->
                     </ul>
