--- a/templates/ad_hoc_chat.html
+++ b/templates/ad_hoc_chat.html
@@ -8,7 +8,7 @@
     <div class="card">
         <div class="card-body" id="chat-container">
             <!-- Chat messages will be displayed here -->
-            {% for message in current_result.split('\n') %}
+            {% for message in result.split('\n') %}
             <div>{{ message }}</div>
             {% endfor %}
         </div>
@@ -22,22 +22,5 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    function updateChat() {
-        // Fetch latest tokens from the server
-        fetch("{{ url_for('ad_hoc_chat') }}")
-            .then(response => response.json())
-            .then(data => {
-                const chatContainer = document.getElementById('chat-container');
-                // Update the chat messages
-                chatContainer.innerHTML = data.result.split('\n').map(message => `<div>${message}</div>`).join('');
-            });
-    }
-
-    // Refresh every 5 seconds
-    setInterval(updateChat, 5000);
-</script>
 
 {% endblock %}
