--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                                     <!-- New Input Field for Prompt -->
                                     <div class="row mb-3">
                                         <div class="col">
-                                            <label for="prompt" class="form-label">Optional Prompt Override: </label>
+                                            <label for="prompt" class="form-label">Initial Instructions: </label>
                                             <textarea name="prompt" class="form-control" rows="3"></textarea>
                                         </div>
                                     </div>
@@ -158,8 +158,7 @@
                                                         <!-- New Input Field for Prompt -->
                                                         <div class="row">
                                                             <div class="col-auto mt-2">
-                                                                <label for="prompt" class="form-label">Optional Prompt
-                                                                    Override: </label>
+                                                                <label for="prompt" class="form-label">Initial Instructions: </label>
                                                             </div>
                                                             <div class="col">
                                                                 <input type="text" name="prompt" class="form-control">
@@ -206,7 +205,7 @@
                                 <p>Filename: {{ job.filename }}</p>
                                 <p>Status: {{ job.status }}</p>
                                 <p>Remaining Rounds: {{ job.rounds }}</p>
-                                <p>Prompt Override: {{ job.prompt }}</p>
+                                <p>Initial Instruction: {{ job.prompt }}</p>
                                 <div style="float: right">
                                     <a href="{{ url_for('clear_batch_job', job_id=job.job_id) }}"
                                         class="text-danger mt-2 ml-0">Clear Job From Batch</a>
